hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tapply_typedef.php.exp
File "tapply_typedef.php", line 8, characters 12-13:
Invalid return type (Typing[4110])
File "tapply_typedef.php", line 8, characters 20-20:
Expected int
File "tapply_typedef.php", line 8, characters 12-13:
But got dynamic
File "tapply_typedef.php", line 12, characters 12-13:
Invalid return type (Typing[4110])
File "tapply_typedef.php", line 12, characters 20-20:
Expected int
File "tapply_typedef.php", line 12, characters 12-13:
But got dynamic
