hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tapply_typedef.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

type X = int;
newtype Y = int;

function f(~X $i): X {
  return $i; // error
}

function g(~Y $i): Y {
  return $i; // error
}
